# cookiecutter-data-science

./: cookiecutter.json  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
hooks/: post_gen_project.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .dockerignore  Containerfile  Makefile  pyproject.toml  requirements.txt  test_environment.py
{{ cookiecutter.repo_name }}/.github/workflows/: lint.yml  pytest.yml
{{ cookiecutter.repo_name }}/tests/: test_sample.py
