{%- if cookiecutter.package_manager == 'poetry' %}
[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
{%- if cookiecutter.open_source_license != 'No license file' %}
license = "{{ cookiecutter.open_source_license }}"
{%- endif %}
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
click = "^8.1.3"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.1"
flake8 = "^6.0.0"
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
{% endif %}
